# Terrain-Stitcher

./: .gitignore  README.md  main.py  main_arch.py  pyproject.toml  requirements.txt  run.bat  run_berthoud_pass_co.bat  run_corinth_ms.bat  run_marys_peak_or.bat  run_mesa_grande_ca.bat  run_millers_ranch_ca.bat  run_tesuque_peak_nm.bat
blocked_regions/: run_tesuque_peak_nm.bat
constants/: USGS_Helpers.py
constants/projects/201303_vinton_county_oh_1ft_sp_cnir/: 201303_vinton_county_oh_1ft_sp_cnir_images.txt
helpers/: USGS_Scraper.py
src/: __init__.py  api_client.py  main.py
src/terrain_pkg/: main.py
src/terrain_pkg/DataSources/: DataSource.py  HighResolutionOrthoImagery.py
src/terrain_pkg/common/: __init__.py
src/terrain_stitcher/: __main__.py  cli.py  main_old.py
src/terrain_stitcher/common/: ParseArea.py  TerrainArea.py  __init__.py
src/terrain_stitcher/dataSources/: DataSource.py  HighResolutionOrthoImagery.py  __init__.py
src/terrain_stitcher/functions/: ElevationTIFPrep.py  OrthoPrep.py  OrthoScraper.py  PrepFinalMedia.py  ShapeGenerator.py  __init__.py
src/terrain_stitcher/usgs/: __init__.py  api_client.py  config.py
src/terrain_stitcher/util/: __init__.py  files.py
